<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2015. Anders Nielsen
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/settings_general_category">

        <PreferenceScreen
            android:key="settings_equalizer"
            android:title="@string/settings_equalizer_title"
            android:summary="@string/settings_equalizer_summary">
        </PreferenceScreen>

        <SwitchPreference
            android:key="settings_inverted_swipe"
            android:title="@string/settings_inverted_title"
            android:summary="@string/settings_inverted_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="settings_verbose_logging"
            android:title="@string/settings_logging_title"
            android:summary="@string/settings_logging_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
